--- a/src/notebook/ModeloPLN.ipynb
+++ b/src/notebook/ModeloPLN.ipynb
@@ -26,12 +26,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importação das bibliotecas:\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bibliotecas para a remoção de acento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importação das bibliotecas:\n",
+    "from unidecode import unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: unidecode in c:\\users\\inteli\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.3.6)"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.1.1 -> 23.1.2\n",
+      "[notice] To update, run: C:\\Users\\Inteli\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instalação das bibliotecas\n",
+    "!pip install unidecode"
    ]
   },
   {
@@ -44,17 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importação da base de dados:\n",
-    "df = pd.read_excel(r'C:\\Users\\Patrick\\Desktop\\Base_Inicial.xlsx')"
+    "df = pd.read_csv('C:/Users/Inteli/Downloads/BaseInicialSheet1.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +229,7 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td></td>\n",
+       "      <td>btgpactual</td>\n",
        "      <td>Oi, Nelson! Tudo bem?\\n\\nPossuímos soluções co...</td>\n",
        "      <td>CkG9KXjpY2B</td>\n",
        "      <td>reply</td>\n",
@@ -317,7 +369,7 @@
        "1           1        2      btgpactual   \n",
        "2           2        3      btgpactual   \n",
        "3           3        4      btgpactual   \n",
-       "4           4        5                   \n",
+       "4           4        5      btgpactual   \n",
        "...       ...      ...             ...   \n",
        "4544     4544  3028308   caioaugustofr   \n",
        "4545     4545  3028501      btgpactual   \n",
@@ -393,7 +445,7 @@
        "[4549 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,11 +491,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#codigo"
+    "#Código para remoção dos acentos\n",
+    "def removeAcento(coluna):\n",
+    "    coluna = coluna.apply(lambda x: unidecode(str(x)))\n",
+    "    return coluna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Ola, Ana Paula! Como vai?\\n\\nSentimos muito pe...\n",
+       "1       Ola, Rosana! Tudo bem?\\n\\nPara te orientarmos ...\n",
+       "2                              @luizantoniojovinodossan  \n",
+       "3       @ronialencar Boa tarde! Tudo bem?\\n\\nLamentamo...\n",
+       "4       Oi, Nelson! Tudo bem?\\n\\nPossuimos solucoes co...\n",
+       "                              ...                        \n",
+       "4544    Estao contratando muitos blogueiros, mas eu fi...\n",
+       "4545                                             @xubs._ \n",
+       "4546                         Agradecemos o seu feedback! \n",
+       "4547                                       Arrasa Micaaa \n",
+       "4548                                         Excelencia! \n",
+       "Name: texto, Length: 4549, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Teste isolado da função remoção de acentos\n",
+    "removeAcento(df['texto'])"
    ]
   },
   {
@@ -525,6 +612,28 @@
   },
   {
    "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explicação do tratamento:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tratamento de abreviações"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
