Tratamento de abreviações

--- a/src/notebook/ModeloPLN.ipynb
+++ b/src/notebook/ModeloPLN.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modelo de PLN de análise de sentimento."
+    "# Processamento de linguagem natural e modelo de análise de sentimento."
    ]
   },
   {
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "#importação das bibliotecas:\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -44,24 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#importação das bibliotecas:\n",
-    "from unidecode import unidecode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: unidecode in c:\\users\\inteli\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.3.6)"
+      "Requirement already satisfied: unidecode in c:\\users\\inteli\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (1.3.6)\n"
      ]
     },
     {
@@ -72,18 +62,21 @@
       "[notice] A new release of pip is available: 23.1.1 -> 23.1.2\n",
       "[notice] To update, run: C:\\Users\\Inteli\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
     "# instalação das bibliotecas\n",
     "!pip install unidecode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importação das bibliotecas:\n",
+    "from unidecode import unidecode"
    ]
   },
   {
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +438,7 @@
        "[4549 rows x 16 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,12 +479,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explicação do tratamento:"
+    "Para garantir que um texto seja processado de forma consistente, é importante realizar a normalização dos seus componentes. Nesse sentido, a remoção de acentos é uma etapa fundamental, já que isso ajuda o algoritmo a compreender com mais precisão o que o texto está dizendo. Além disso, a ausência de acentos reduz o risco de que o algoritmo interprete de maneira diferente duas palavras idênticas, mas que tenham sido acentuadas de formas distintas ou incorretas. Em resumo, a remoção de acentos é uma prática essencial no pré-processamento de textos para aprimorar a qualidade e a eficácia da análise de dados em linguagem natural."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,10 +513,10 @@
        "4546                         Agradecemos o seu feedback! \n",
        "4547                                       Arrasa Micaaa \n",
        "4548                                         Excelencia! \n",
-       "Name: texto, Length: 4549, dtype: object"
+       "Name: texto, Length: 4449, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,18 +627,140 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explicação do tratamento:"
+    "O tratamento de abreviações é importante porque garante que o algoritmo de processamento de linguagem natural interprete corretamente o significado do texto. Ao substituir abreviações por suas formas completas, o texto se torna mais legível e compreensível para o algoritmo que realizará o processamento."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# bibliotecas utilizadas para o tratamento de abreviações\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   \n",
+    "def tratamentoAbreviacoes(coluna):    \n",
+    "    coluna = coluna.astype(str)\n",
+    "    coluna.str.lower()\n",
+    "# Dicionário com as abreviações e suas expansões\n",
+    "    abreviacoes = {\n",
+    "        r'\\bvc\\b': 'você',\n",
+    "        r'\\btbm\\b': 'também',\n",
+    "        r'\\bpq\\b': 'porque',\n",
+    "        r'\\bmt\\b': 'muito',\n",
+    "        r'\\bmto\\b':'muito',\n",
+    "        r'\\bblz\\b': 'beleza',\n",
+    "        r'\\bjah\\b': 'já',\n",
+    "        r'\\bbj\\b': 'beijo',\n",
+    "        r'\\bflw\\b': 'falou',\n",
+    "        r'\\bvlw\\b': 'valeu',\n",
+    "        r'\\bkrl\\b': 'caralho',\n",
+    "        r'\\bqnd\\b': 'quando',\n",
+    "        r'\\bfds\\b': 'fim de semana',\n",
+    "        r'\\bqq\\b': 'qualquer',\n",
+    "        r'\\bmsg\\b': 'mensagem',\n",
+    "        r'\\bp\\b': 'para',\n",
+    "        r'\\bpqp\\b': 'puta que pariu',\n",
+    "        r'\\bvlh\\b': 'velho',\n",
+    "        r'\\bnss\\b': 'nossa',\n",
+    "        r'\\bngm\\b': 'ninguém',\n",
+    "        r'\\bqm\\b': 'quem',\n",
+    "        r'\\bobs\\b': 'observação',\n",
+    "        r'\\bqt\\b': 'quanto',\n",
+    "        r'\\btbm ñ\\b': 'também não',\n",
+    "        r'\\bpf\\b': 'por favor',\n",
+    "        r'\\bpdc\\b': 'pode crer',\n",
+    "        r'\\btalkei\\b': 'ok',\n",
+    "        r'\\bd+\\b': 'demais',\n",
+    "        r'\\bdms\\b': 'demais',\n",
+    "        r'\\bsqn\\b': 'só que não',\n",
+    "        r'\\bmsm\\b': 'mesmo',\n",
+    "        r'\\bn/ao\\b': 'não',\n",
+    "        r'\\bn/\\b': 'não',\n",
+    "        r'\\bblz\\b': 'beleza',\n",
+    "        r'\\bq\\b': 'que',\n",
+    "        r'\\btd\\b': 'tudo',\n",
+    "        r'\\bpfvr\\b': 'por favor',\n",
+    "        r'\\bgnt\\b': 'gente',\n",
+    "        r'\\bto\\b': 'estou',\n",
+    "        r'\\bvcs\\b': 'vocês',\n",
+    "        r'\\bn/oa\\b': 'não',\n",
+    "        r'\\bsla\\b': 'sei lá',\n",
+    "        r'\\bflws\\b': 'falou',\n",
+    "        r'\\bbjos\\b': 'beijos',\n",
+    "        r'\\bkd\\b': 'cadê',\n",
+    "        r'\\blgl\\b': 'legal',\n",
+    "        r'\\bnum\\b': 'número',\n",
+    "        r'\\bjá q\\b': 'já que',\n",
+    "        r'\\bmano\\b': 'irmão',\n",
+    "        r'\\bpke\\b': 'porque',\n",
+    "        r'\\bpr\\b': 'para',\n",
+    "        r'\\btpm\\b': 'tensão pré-menstrual',\n",
+    "        r'\\btá\\b': 'está',\n",
+    "        r'\\bqmto\\b': 'muito',\n",
+    "        r'\\bñ\\b': 'não',\n",
+    "        r'\\bvamu\\b': 'vamos',\n",
+    "        r'\\b/\\b': '',\n",
+    "    }\n",
+    "\n",
+    "    # Aplica a substituição de cada abreviação no dataframe\n",
+    "    for abreviacao, expansao in abreviacoes.items():\n",
+    "        coluna= coluna.apply(lambda x: re.sub(abreviacao, expansao, x, flags=re.IGNORECASE))\n",
+    "    \n",
+    "    return coluna"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teste isolado:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       Ola, Ana Paula! Como vai?\\n\\nSentimos muito pe...\n",
+       "1       Ola, Rosana! Tudo bem?\\n\\nPara te orientarmos ...\n",
+       "2                              @luizantoniojovinodossan  \n",
+       "3       @ronialencar Boa tarde! Tudo bem?\\n\\nLamentamo...\n",
+       "4       Oi, Nelson! Tudo bem?\\n\\nPossuimos solucoes co...\n",
+       "                              ...                        \n",
+       "4544    Estao contratando muitos blogueiros, mas eu fi...\n",
+       "4545                                             @xubs._ \n",
+       "4546                         Agradecemos o seu feedback! \n",
+       "4547                                       Arrasa Micaaa \n",
+       "4548                                         Excelencia! \n",
+       "Name: texto, Length: 4549, dtype: object"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# teste isolado\n",
+    "tratamentoAbreviacoes(removeAcento(df['texto']))"
+   ]
   },
   {
    "attachments": {},
