adição markdown em "rede neural"

--- a/src/notebook/modelosAtualizado.ipynb
+++ b/src/notebook/modelosAtualizado.ipynb
@@ -20596,8 +20596,17 @@
         "id": "bdqjpOhOJ19K"
       },
       "source": [
-        "### Rede neural"
+        "### 6 Rede neural"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preparação dos dados"
+      ],
+      "metadata": {
+        "id": "FSSONL1Aieru"
+      }
     },
     {
       "cell_type": "code",
@@ -20664,6 +20673,7 @@
       },
       "outputs": [],
       "source": [
+        "#Importa biblioteca\n",
         "from sklearn.model_selection import train_test_split\n",
         "import keras\n",
         "from keras.models import Sequential\n",
@@ -20794,19 +20804,19 @@
         "id": "LueBMrl2TOX-"
       },
       "source": [
-        "#### 5.5.4 treinando o modelo"
+        "#### Definição e treinamento do modelo"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Primeiramente, inicializamos o modelo sequencial chamado classificador. Em seguida, adicionamos uma camada densa com 26 unidades de neurônios, aplicando a função de ativação ReLU e inicializando os pesos de forma uniforme. Essa camada recebe dados de entrada com dimensão 50(camada oculta). Logo após, adicionamos uma camada densa de saída com uma única unidade, utilizando a função de ativação sigmoid.\n",
+        "Inicializamos o modelo sequencial chamado classificador com uma camada densa de 26 unidades de neurônios, usando a função de ativação ReLU e inicialização uniforme dos pesos. A camada de saída possui uma única unidade com ativação sigmoid.\n",
         "\n",
-        "Após definir a arquitetura do modelo, compilamos o mesmo usando o otimizador Adam, a função de perda binary_crossentropy e a métrica de avaliação accuracy.\n",
+        "Compilamos o modelo com o otimizador Adam, a função de perda binary_crossentropy e a métrica accuracy.\n",
         "\n",
-        "Em seguida, executamos o treinamento do modelo utilizando os dados de treinamento previsores_treinamento e classe_treinamento. Estabelecemos um tamanho de lote de 35 e definimos 30 épocas de treinamento.\n",
+        "Realizamos o treinamento do modelo usando os dados de treinamento previsores_treinamento e classe_treinamento, com um tamanho de lote de 35 e 30 épocas.\n",
         "\n",
-        "Essas etapas permitem que o modelo aprenda a fazer previsões com base nos dados fornecidos durante o treinamento."
+        "Dessa forma, o modelo aprende a fazer previsões com base nos dados de treinamento fornecidos."
       ],
       "metadata": {
         "id": "bRMMGwwzRpiv"
@@ -20916,6 +20926,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Avaliação do Modelo"
+      ],
+      "metadata": {
+        "id": "HBMvcof0jOK3"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -20944,6 +20963,15 @@
         "\n",
         "resultado = classificador.evaluate(previsores_teste, classe_teste)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Resultados"
+      ],
+      "metadata": {
+        "id": "6tOSN5TdjRRH"
+      }
     },
     {
       "cell_type": "code",
