Adicionado o modelo SVM

--- a/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
+++ b/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
@@ -1294,7 +1294,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Extrair Hashtags"
+        "### 3.8 Extração de hashtags"
       ],
       "metadata": {
         "id": "pTv-ak_DKv35"
@@ -1382,7 +1382,7 @@
         "id": "NwbhwwR1BEpo"
       },
       "source": [
-        "### 3.8 Testes isolados"
+        "### 3.9 Testes isolados"
       ]
     },
     {
@@ -1532,7 +1532,7 @@
         "id": "nIxt9tJAHnCb"
       },
       "source": [
-        "### 3.9 Pipeline dos pré processamentos"
+        "### 3.10 Pipeline dos pré processamentos"
       ]
     },
     {
@@ -7201,11 +7201,360 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### 6.4 Rede Neural com Transformers Sentence Embedding"
+      ],
+      "metadata": {
+        "id": "sd4R5Pczlk-T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from sentence_transformers import SentenceTransformer"
+      ],
+      "metadata": {
+        "id": "nYsmUQIgl0UW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Importa biblioteca\n",
+        "import keras\n",
+        "from keras.models import Sequential\n",
+        "from keras.layers import Dense\n",
+        "from keras.callbacks import EarlyStopping\n",
+        "\n",
+        "from sklearn.metrics import confusion_matrix, accuracy_score"
+      ],
+      "metadata": {
+        "id": "Mz5NYQA23SSs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "Rj3KcQDq3UNT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = SentenceTransformer('distiluse-base-multilingual-cased')"
+      ],
+      "metadata": {
+        "id": "zFMLWaWj3lXf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentimento_trasformers = pd.DataFrame(df['targetSentimento'])"
+      ],
+      "metadata": {
+        "id": "CLd4B3C53WzN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Calcula os embeddings para a coluna de sentenças\n",
+        "embeddings_liz = model.encode(df['texto'].tolist())\n",
+        "\n",
+        "# Cria um novo DataFrame com os embeddings\n",
+        "embeddings_df = pd.DataFrame(embeddings_liz)\n"
+      ],
+      "metadata": {
+        "id": "Hn3_RYLy3inN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentimento_trasformers = sentimento_trasformers.replace({'POSITIVE': 0,'NEUTRAL': 1, 'NEGATIVE': 2}) "
+      ],
+      "metadata": {
+        "id": "HVZG-2oZ3xeg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "previsores_treinamento_trasformers, previsores_teste_trasformers, classe_treinamento_trasformers, classe_teste_trasformers = train_test_split(embeddings_df, sentimento_trasformers, test_size=0.25)"
+      ],
+      "metadata": {
+        "id": "rNsKhD3Q31-A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classe_treinamento_trasformers.value_counts()"
+      ],
+      "metadata": {
+        "id": "mMa_uO0g3-Hx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classe_treinamento_trasformers = to_categorical(classe_treinamento_trasformers, num_classes=3)\n",
+        "classe_teste_trasformers = to_categorical(classe_teste_trasformers, num_classes=3)"
+      ],
+      "metadata": {
+        "id": "N73KIWH_4DdH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classificador_trasformers = Sequential()\n",
+        "\n",
+        "classificador_trasformers.add(Dense(units = 256, activation = \"relu\", \n",
+        "                        kernel_initializer = 'normal', input_dim = 512)) \n",
+        "\n",
+        "classificador_trasformers.add(Dense(units = 3, activation = 'softmax')) \n",
+        "\n",
+        "classificador_trasformers.compile(optimizer = 'adam', loss = 'categorical_crossentropy', \n",
+        "                      metrics = ['accuracy']) "
+      ],
+      "metadata": {
+        "id": "SIUZbMCz4H6P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=4)\n",
+        "\n",
+        "classificador_trasformers.fit(previsores_treinamento_trasformers, classe_treinamento_trasformers, \n",
+        "                  validation_data=(previsores_teste, classe_teste), \n",
+        "                  epochs=100, callbacks=[early_stopping])"
+      ],
+      "metadata": {
+        "id": "OHdrXjWb4Kdi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "previsoes_trasformers = classificador_trasformers.predict(previsores_teste_trasformers)\n",
+        "\n",
+        "\n",
+        "previsoes_trasformers = np.argmax(previsoes, axis=1)\n",
+        "\n",
+        "# Converter os alvos verdadeiros para inteiros \n",
+        "classe_teste_int = np.argmax(classe_teste_trasformers, axis=1)\n",
+        "\n",
+        "# Criar a matriz de confusão\n",
+        "matriz_confusao = confusion_matrix(classe_teste_int, previsoes)\n",
+        "\n",
+        "# Plotar a matriz de confusão\n",
+        "plt.figure(figsize=(10, 7))\n",
+        "sns.heatmap(matriz_confusao, annot=True, fmt='d')\n",
+        "plt.xlabel('Previsto')\n",
+        "plt.ylabel('Verdadeiro')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "xl1FO90e4New"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2o68QLO3OQz2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.5 Support Vector Machine (SVM)"
+      ],
+      "metadata": {
+        "id": "dv0Sc3DnFFaC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qDYE9TY2G5NB"
+      },
+      "source": [
+        "##### 6.5.1 Setup"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ff6zMywLG5NB"
+      },
+      "outputs": [],
+      "source": [
+        "from sklearn import svm\n",
+        "from sklearn import datasets\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+        "from sklearn.metrics import accuracy_score"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tRXETr_yG5NB"
+      },
+      "source": [
+        "##### 6.5.2 Definição de bases"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_wh6wIzQG5NB"
+      },
+      "outputs": [],
+      "source": [
+        "X = df_unido_word.drop('targetSentimento', axis=1)\n",
+        "y = df_unido_word['targetSentimento']\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HHPaHkyVHcTI"
+      },
+      "source": [
+        "##### 6.5.3 Modelagem com hiperparâmetros"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "amtBBqfGG5NB"
+      },
+      "outputs": [],
+      "source": [
+        "param_grid = {\n",
+        "    'kernel': ['linear', 'rbf'],\n",
+        "    'C': [0.1, 2],\n",
+        "    'gamma': [0.1, 2]\n",
+        "}\n",
+        "\n",
+        "svm_model = svm.SVC()\n",
+        "\n",
+        "grid_search = GridSearchCV(estimator=svm_model, param_grid=param_grid, cv=3)\n",
+        "\n",
+        "grid_search.fit(X_train, y_train)\n",
+        "\n",
+        "best_model = grid_search.best_estimator_"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TfiECHdaG5NC"
+      },
+      "source": [
+        "##### 6.5.4 Métricas de avaliação do modelo "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RjTksW2yG5NC",
+        "outputId": "49d59774-6934-4341-d3f3-f7ac0d82d03e"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Acurácia: 0.45471349353049906\n",
+            "Matriz de Confusão:\n",
+            "[[193  61 109]\n",
+            " [174 264 174]\n",
+            " [190 177 281]]\n",
+            "Relatório de Classificação:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "    NEGATIVE       0.35      0.53      0.42       363\n",
+            "     NEUTRAL       0.53      0.43      0.47       612\n",
+            "    POSITIVE       0.50      0.43      0.46       648\n",
+            "\n",
+            "    accuracy                           0.45      1623\n",
+            "   macro avg       0.46      0.47      0.45      1623\n",
+            "weighted avg       0.47      0.45      0.46      1623\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "y_pred = best_model.predict(X_test)\n",
+        "\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "print(\"Acurácia:\", accuracy)\n",
+        "\n",
+        "print(\"Matriz de Confusão:\")\n",
+        "print(confusion_matrix(y_test, y_pred))\n",
+        "\n",
+        "print(\"Relatório de Classificação:\")\n",
+        "print(classification_report(y_test, y_pred))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "XWsMTdYk4-nT"
       },
       "source": [
-        "### 6.4 Comparação de resultados entre os modelos."
+        "### 6.5 Comparação de resultados entre os modelos."
       ]
     },
     {
@@ -7214,7 +7563,7 @@
         "id": "wPKSsBJF4-nT"
       },
       "source": [
-        "#### 6.4.1 Métricas utilizadas para avaliação dos modelos"
+        "#### 6.5.1 Métricas utilizadas para avaliação dos modelos"
       ]
     },
     {
@@ -7281,7 +7630,7 @@
         "id": "XlO3PxGG4-nV"
       },
       "source": [
-        "#### 6.4.2 Resultados"
+        "#### 6.5.2 Resultados"
       ]
     },
     {
@@ -7490,7 +7839,7 @@
         "id": "Sy1nswee4-nW"
       },
       "source": [
-        "#### 6.4.3 Matrizes de confusão"
+        "#### 6.5.3 Matrizes de confusão"
       ]
     },
     {
@@ -7642,7 +7991,7 @@
         "id": "C_h0N9m-4-nX"
       },
       "source": [
-        "#### 6.4.4 Conclusão"
+        "#### 6.5.4 Conclusão"
       ]
     },
     {
@@ -7662,7 +8011,7 @@
         "id": "KYWfi9-E4-nY"
       },
       "source": [
-        "### 6.5 Referências"
+        "### 6.6 Referências"
       ]
     },
     {
@@ -7680,7 +8029,10 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [
+        "F0pr4J2Ibba9",
         "_b6_Ys8tr-e9",
+        "FgDJv2N-yPyx",
+        "tH4hTYprbbbI",
         "2TaHb7fRbbbJ",
         "WYJ4p_SbbbbM",
         "yUhw8Lu9DMIA",
@@ -7697,10 +8049,16 @@
         "3BHFLPIFAPbj",
         "5tAPjt6tqQgv",
         "6eiF27pNmMSB",
+        "4nhw22t9-_t2",
         "FLimHLeKDoS3",
         "vqbfSexYDdku",
         "3xg3bw7LNZoq",
-        "E0416A8mNZos"
+        "E0416A8mNZos",
+        "nb-GnkkI4-nM",
+        "l4HzMg_54-nO",
+        "QW8bsKZF4-nQ",
+        "sd4R5Pczlk-T",
+        "dv0Sc3DnFFaC"
       ],
       "provenance": [],
       "toc_visible": true
