Update modelo SVM com comentários

--- a/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
+++ b/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
@@ -7454,9 +7454,11 @@
       },
       "outputs": [],
       "source": [
+        "# Carregar o conjunto de dados\n",
         "X = df_unido_word.drop('targetSentimento', axis=1)\n",
         "y = df_unido_word['targetSentimento']\n",
         "\n",
+        "# Dividir o conjunto de dados em treinamento e teste\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ]
     },
@@ -7477,18 +7479,23 @@
       },
       "outputs": [],
       "source": [
+        "# Definir os hiperparâmetros a serem testados\n",
         "param_grid = {\n",
         "    'kernel': ['linear', 'rbf'],\n",
         "    'C': [0.1, 2],\n",
         "    'gamma': [0.1, 2]\n",
         "}\n",
         "\n",
+        "# Criar um classificador SVM\n",
         "svm_model = svm.SVC()\n",
         "\n",
+        "# Criar o objeto Grid Search\n",
         "grid_search = GridSearchCV(estimator=svm_model, param_grid=param_grid, cv=3)\n",
         "\n",
+        "# Realizar o Grid Search\n",
         "grid_search.fit(X_train, y_train)\n",
         "\n",
+        "# Obter o melhor modelo encontrado\n",
         "best_model = grid_search.best_estimator_"
       ]
     },
@@ -7536,14 +7543,18 @@
         }
       ],
       "source": [
+        "# Fazer previsões usando o melhor modelo\n",
         "y_pred = best_model.predict(X_test)\n",
         "\n",
+        "# Calcular a acurácia das previsões\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
         "print(\"Acurácia:\", accuracy)\n",
         "\n",
+        "# Exibir a matriz de confusão\n",
         "print(\"Matriz de Confusão:\")\n",
         "print(confusion_matrix(y_test, y_pred))\n",
         "\n",
+        "# Exibir o relatório de classificação (incluindo recall)\n",
         "print(\"Relatório de Classificação:\")\n",
         "print(classification_report(y_test, y_pred))"
       ]
@@ -8057,8 +8068,7 @@
         "nb-GnkkI4-nM",
         "l4HzMg_54-nO",
         "QW8bsKZF4-nQ",
-        "sd4R5Pczlk-T",
-        "dv0Sc3DnFFaC"
+        "sd4R5Pczlk-T"
       ],
       "provenance": [],
       "toc_visible": true
