--- a/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
+++ b/src/notebook/ModeloPLN_grupo1_sprint4.ipynb
@@ -7416,6 +7416,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "O SVM (Support Vector Machine) é um algoritmo de aprendizado de máquina supervisionado que pode ser usado tanto para desafios de classificação quanto para de regressão. Ele busca uma linha de separação entre duas classes distintas analisando os dois pontos, um de cada grupo, mais próximos da outra classe. \n",
+        "\n",
+        "A partir de seu foco no treinamento e classificação de um dataset, seu objetivo principal é encontrar um hiperplano que melhor separe os pontos de dados em diferentes classes ou aproxime os pontos de dados com menor erro possível.\n",
+        "\n",
+        "*Referências:*\n",
+        "\n",
+        "https://www.inf.ufpr.br/dagoncalves/IA07.pdf \n",
+        "\n",
+        "[https://medium.com/turing-talks/turing-talks-12-classificação-por-svm-f4598094a3f1](https://medium.com/turing-talks/turing-talks-12-classifica%C3%A7%C3%A3o-por-svm-f4598094a3f1)"
+      ],
+      "metadata": {
+        "id": "wenEFZlRPq5t"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "qDYE9TY2G5NB"
       },
@@ -8067,8 +8084,7 @@
         "E0416A8mNZos",
         "nb-GnkkI4-nM",
         "l4HzMg_54-nO",
-        "QW8bsKZF4-nQ",
-        "sd4R5Pczlk-T"
+        "QW8bsKZF4-nQ"
       ],
       "provenance": [],
       "toc_visible": true
