Adicionada justificativa para escolha do modelo

--- a/src/notebook/Rede_Neural_Transformers_ModeloPLN_Final_grupo1_sprint5.ipynb
+++ b/src/notebook/Rede_Neural_Transformers_ModeloPLN_Final_grupo1_sprint5.ipynb
@@ -15,16 +15,38 @@
         "id": "KNUwxSCZATI5"
       },
       "source": [
-        "A fim de que seja possível comparar os tópicos abaixo descritos com os itens explicitados pelo barema, encontra-se, nessa célula, um índice comparativo entre ambas partes. Ele foi feito para facilitar a correção dos professores e permitir a existência de uma autonomia na nomenclatura das células de organização.\n",
-        "- Instalação -> tópico 1.0\n",
-        "- Testes isolados - >  tópico 3.8\n",
-        "- Definição de funções -> tópico 3.1 a 3.7\n",
-        "- Testes das funções -> tópico 4.3\n",
-        "- Análise descritiva -> tópico 2.0\n",
-        "- Pré processamento -> tópico 3.0\n",
-        "- Pipeline -> tópico 4.3\n",
-        "- Modelo Bag of words -> tópico 4.0\n"
+        "## Justificativa para escolha do modelo"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "É importante definir critérios para a escolha do modelo mais adequado ao problema proposto neste projeto, e para isso, é necessário considerar o valor mais relevante das métricas utilizadas, ressaltando que a métrica mais relevante pode variar, de acordo com a classe mais importante a ser classificada de forma correta, levando em conta qual tipo de erro da predição pode ser mais prejudicial ao usuário que irá utilizar a solução desenvolvida neste projeto.\n",
+        "\n",
+        "\n",
+        "Dentre as três classes de categorias de sentimentos, Positivo, Neutro e Negativo, o sentimento mais importante de ser identificado de forma correta é o Negativo, pelo impacto que elementos dessa classe podem apresentar ao usuário do sistema desenvolvido. Sendo assim, o erro mais crítico é o de Falsos Negativos, que podem passar despercebidos como sendo de outras classes, enquanto é na verdade da classe Negativo.\n",
+        "\n",
+        "\n",
+        "Analisando este cenário, é desejável utilizar o modelo que apresenta um alto índice de revocação, ou seja, que mais corretamente identificam elementos como sendo da classe Negativo, reduzindo assim o número de Falsos Negativos. Sendo essa a principal métrica de avaliação para o critério de escolha do modelo com base nos resultados obtidos.\n",
+        "\n",
+        "\n",
+        "Também é importante destacar que, ao confrontar os resultados dos modelos, seja levado em consideração o modelo com acurácia mais alta, além da revocação, e o tipo de vetorização que o modelo melhor se desempenhou. A combinação desses critérios indicará o modelo mais adequado para o projeto.\n",
+        "\n",
+        "\n",
+        "Após considerar os critérios estabelecidos, o modelo escolhido para a modelagem preditiva foi a Rede Neural com vetorização do tipo Transformers de sentença. Esse modelo se destacou por sua capacidade de capturar o contexto das palavras e por sua complexidade, levando em consideração as relações entre elas.\n",
+        "\n",
+        "\n",
+        "Ao avaliar a importância de identificar corretamente a classe Negativo, levando em conta o impacto que elementos dessa classe podem ter para o BTG, o modelo escolhido apresentou uma alta revocação, garantindo uma correta identificação dos verdadeiros negativos e reduzindo os falsos negativos.\n",
+        "\n",
+        "\n",
+        "Os resultados obtidos demonstraram uma acurácia de 80% e uma revocação de 79,7% para o modelo. Essas métricas refletem a capacidade do modelo em identificar corretamente os sentimentos dos textos, principalmente da classe Negativo.\n",
+        "\n",
+        "\n",
+        "Portanto, com base nos critérios estabelecidos, a escolha do modelo de Rede Neural com vetorização do tipo Transformers se mostrou adequada para o projeto, pois atende tanto ao objetivo de identificar corretamente a classe Negativo quanto à obtenção de uma alta eficácia e revocação. Isso permitirá uma análise precisa dos sentimentos dos textos, maximizando a eficácia do sistema desenvolvido.\n"
+      ],
+      "metadata": {
+        "id": "8dRwqmDaiXfr"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4201,7 +4223,7 @@
         "id": "E7VoyXSU4-nH"
       },
       "source": [
-        "## 6.0 Modelos"
+        "## 3.0 Modelos"
       ]
     },
     {
@@ -4210,7 +4232,7 @@
         "id": "sd4R5Pczlk-T"
       },
       "source": [
-        "### 6.4 Rede Neural com Transformers Sentence Embedding"
+        "### 3.4 Rede Neural com Transformers Sentence Embedding"
       ]
     },
     {
@@ -5482,7 +5504,7 @@
         "id": "XWsMTdYk4-nT"
       },
       "source": [
-        "## 7.0 Comparação de resultados."
+        "## 4.0 Comparação de resultados."
       ]
     },
     {
@@ -5873,7 +5895,7 @@
         "id": "KYWfi9-E4-nY"
       },
       "source": [
-        "## 8.0 Referências"
+        "## 5.0 Referências"
       ]
     },
     {
@@ -5892,6 +5914,9 @@
     "colab": {
       "collapsed_sections": [
         "_b6_Ys8tr-e9",
+        "cacmvj7kMIpZ",
+        "E7VoyXSU4-nH",
+        "sd4R5Pczlk-T",
         "XWsMTdYk4-nT",
         "wPKSsBJF4-nT",
         "XlO3PxGG4-nV",
