--- a/src/notebook/ModeloPLN_grupo1_sprint5.ipynb
+++ b/src/notebook/ModeloPLN_grupo1_sprint5.ipynb
@@ -6169,6 +6169,11 @@
       },
       "outputs": [],
       "source": [
+        "#Função que plota uma matriz de confusão.\n",
+        "#Parâmetros:\n",
+        "# matriz: matriz de confusão\n",
+        "# cor: esquema de cores para a visualização do heatmap\n",
+        "\n",
         "def plotarMatriz(matriz,cor):\n",
         "    plt.figure(figsize=(8, 6))\n",
         "    sns.heatmap(matriz, annot=True, fmt=\"d\", cmap=cor)\n",
